--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<h1>
-  {{title}}
-</h1>
+<ul>
+  <li><a routerLink="/">Home</a></li>
+  <li><a routerLink="/movies">Movies</a></li>
+</ul>
+<hr>
 <router-outlet></router-outlet>
